--- a/webapp/css/style.css
+++ b/webapp/css/style.css
@@ -1,1 +1,40 @@
-/* Enter your custom styles here */
+/* Enter your custom styles here *//* Enter your custom styles here */
+.prueba{
+    font-weight: bold;
+}
+.csMasterPage{
+    background-color: #eff4f9;
+}
+.csFontSize{
+    font-size: 65px;
+}
+.csDate{
+    background-color: #E7E7E7;
+}
+.sizeIconDate {
+	font-size : 2rem;
+}
+.Login{
+    background-image:url("../resources/perfil_corporativo.jpg");
+    width: 100%;
+    height: 100%;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: 40%;
+}
+.contenedor_principal{
+    background-color: rgba(255, 255, 255, 1);
+    position: relative;
+    border-radius: 15px;
+    left:0px;
+    top:0px;
+}
+
+/* .Login{
+    background-image:url("https://www.divemotor.com/cdn/servicio-star.jpg");
+    width: auto;
+    height: 100px; 
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: 40%;
+} */
