--- a/webapp/view/Main.view.xml
+++ b/webapp/view/Main.view.xml
@@ -64,7 +64,7 @@
             <OverflowToolbar>
                 <content>
                     <Button id="btChangeOrder" text="{i18n>textButtonChangeOrder}" type="Accept" icon="sap-icon://edit" visible="false"/>
-                    <Button id="btDeleteOrder" text="{i18n>textButtonDeleteOrder}" press="" type="Reject" icon="sap-icon://delete" visible="false"/>
+                    <Button id="btDeleteOrder" text="{i18n>textButtonDeleteOrder}" press="_onPressDeleteEnt" type="Reject" icon="sap-icon://delete" visible="false"/>
                     
                     <ToolbarSpacer width=""/>
                     <Button id="btOrderNoOC" text="{i18n>textButtonOrderNoOC}" press="_onPressOrderNoOC" type="Emphasized" visible="true"/>
